[package]
name = "transformerslab"
version = "0.1.0"
edition = "2021"
authors = ["Ronaldo45rt"]
description = "TransformersLab - High-performance Rust+ implementation with async and parallel processing"
license = "MIT"
repository = "https://github.com/Ronaldo45rt/transformerslab"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
